# Sky_Bridge

./: .flake8  .gitignore  CHANGELOG.md  README.md  branches.cmd  branches.log.md  check.cmd  cz.yaml  pyproject.toml  requirements.txt  status.md
.github/workflows/: ci-release.yml
docs/: branches_info.md  commits.md  como_contribuir.md  criar_actions.md  index.md  interpretar_changelog.md
docs/changelogs/: CHANGELOG.md  versions.csv
docs/tarefas/: 2025.04.24.md  2025.04.26.md
src/: main.py
tests/: test_main.py
